# pal-lobster

./: .gitignore  .gitmodules  CLAUDE.md  LOCAL_DEV.md  README.md  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  openclaw-setup.sh  pyproject.toml  requirements.txt  supervisord.conf
backend/app/: auth.py  config.py  main.py
backend/app/models/: __init__.py  chat.py
backend/app/routers/: chat.py  health.py  llm_proxy_passthrough.py
backend/app/services/: llm_proxy.py  ontology.py  openclaw_gateway.py
backend/compute_module/: handler.py
frontend/: .env.local.example  foundry.config.json  index.html  package-lock.json  package.json
frontend/src/: App.tsx  foundry.ts
frontend/src/api/: chat.ts  types.ts
frontend/src/components/chat/: ChatWindow.tsx  MessageInput.tsx  MessageList.tsx
frontend/src/components/layout/: Layout.tsx
frontend/src/hooks/: useChat.ts  useFoundryAuth.ts
infra/: compute-module.json  foundry-objects.json
ontology/: README.md
ontology/link-types/: agent-memory.json  agent-skills.json  conversation-messages.json
ontology/object-types/: agent-state.json  conversation.json  memory-chunk.json  message.json  skill.json
scripts/: run-local-no-docker.sh
