[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "lobster-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "httpx[http2]>=0.27.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    # Foundry Compute Module SDK — install from Palantir's conda/pip channel if needed
    "compute-modules>=1.0.0",
    # OpenClaw WebSocket gateway client
    "websockets>=12.0",
    "cryptography>=42.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*", "compute_module*"]
